  This code created a bug which I can't seem to figure out. /me calls upon the mighty mog & zubov
  After doing site reload, IrcConfig.reload() locks irc.conf from being edited by another application
   even though I close the file. I'm stumped. 
* Changed every IRC plugin to utilize the new permissions code
* !help command will now only show commands that the user has permission to use

2005/02/10 Matt Zimmerman <zubov@users.sourceforge.net>
* site user should display all user information
* converting users from 1.1.4 should convert all information

2005/02/07 Matt Zimmerman <zubov@users.sourceforge.net>
* pasv_addr now a setting in perms.conf for PASV connections to the master (LIST)
* pasv_addr now a setting for slave configurations, site slave slavename set pasv_addr 1.1.1.1
* Both are for use when your master/slave do not report the correct ip for PASV connections

2005/02/06 Matt Zimmerman <zubov@users.sourceforge.net>
* I dare you to get "the SSL bug" again, http://sourceforge.net/tracker/index.php?func=detail&aid=997540&group_id=56385&atid=480372

2005/02/06 Jamal James <teflon114@gmail.com>
* Updated to new Blowfish class provided by k2r

2005/02/05 Morgan Christiansson <drftpd@mog.se>
* Made UserManagerConverter convert lastReset so that users aren't
  reset when imported.

2005/02/03 Morgan Christiansson <drftpd@mog.se>
* Moved slaveselection to it's own source folder for use with the
  DelegatingSlaveSelectionManager.
* Fixed a bunch of minor problems reported by CyBeR.

2005/01/31 Morgan Christiansson <drftpd@mog.se>
* Fixed free credits problem with deleted directories, thanks to VST.

2005/01/25 Jamal James <teflon114@gmail.com>
* Added Blowfish support to SiteBot. w00t
  Much thanks to the fine folks over at http://mircryption.sourceforge.net/
  for providing the java blowfish code
  SiteBot tested with FiSH mIRC addon (http://fish.sekure.us/) and assumed
  to work with mircryption as the code was provided by them.
